refactor exception